$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.507 2007/05/11 08:50:42 tom Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.68
-----------------

PH/01 Another patch from the Sieve maintainer.

PH/02 When an IPv6 address is converted to a string for single-key lookup
      in an address list (e.g. for an item such as "net24-dbm;/net/works"),
      dots are used instead of colons so that keys in lsearch files need not
      contain colons. This was done some time before quoting was made available
      in lsearch files. However, iplsearch files do require colons in IPv6 keys
      (notated using the quote facility) so as to distinguish them from IPv4
      keys. This meant that lookups for IP addresses in host lists did not work
      for iplsearch lookups.

      This has been fixed by arranging for IPv6 addresses to be expressed with
      colons if the lookup type is iplsearch. This is not incompatible, because
      previously such lookups could never work.

      The situation is now rather anomolous, since one *can* have colons in
      ordinary lsearch keys. However, making the change in all cases is
      incompatible and would probably break a number of configurations.

TK/01 Change PRVS address formatting scheme to reflect latests BATV draft
      version.


Exim version 4.67
-----------------

MH/01 Fix for bug #448, segfault in Dovecot authenticator when interface_address
      is unset (happens when testing with -bh and -oMi isn't used). Thanks to
      Jan Srzednicki.

PH/01 Added a new log selector smtp_no_mail, to log SMTP sessions that do not
      issue a MAIL command.

PH/02 In an ACL statement such as

        deny dnslists = X!=127.0.0.2 : X=127.0.0.2

      if a client was not listed at all, or was listed with a value other than
      127.0.0.2, in the X list, but was listed with 127.0.0.2 in the Y list,
      the condition was not true (as it should be), so access was not denied.